commit translated contents

--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -579,6 +579,8 @@
           items:
             - name: Configurar a atualização agendada
               href: refresh-scheduled-refresh.md
+            - name: Configurar a atualização incremental
+              href: service-premium-incremental-refresh.md
             - name: Atualizar um conjunto de dados de um arquivo local do Power BI Desktop
               href: refresh-desktop-file-local-drive.md
             - name: Atualizar um conjunto de dados de um arquivo em nuvem do Power BI Desktop
@@ -701,6 +703,8 @@
               href: service-url-filters.md
             - name: Assine para você e para outras pessoas
               href: service-report-subscribe.md
+            - name: Inserir o relatório no Microsoft Teams
+              href: service-embed-report-microsoft-teams.md
             - name: Inserir o relatório no SharePoint Online
               href: service-embed-report-spo.md
             - name: Inserir o relatório em um site ou portal seguro
@@ -885,8 +889,6 @@
           href: service-premium-metrics-app.md
         - name: Monitorar capacidades no portal de administração
           href: service-admin-premium-monitor-portal.md
-        - name: Configurar a atualização incremental
-          href: service-premium-incremental-refresh.md
         - name: Configurar modelos grandes (versão prévia)
           href: service-premium-large-models.md
         - name: Configurar o Multi-Geo
