commit translated contents

--- a/powerbi-docs/developer/TOC.yml
+++ b/powerbi-docs/developer/TOC.yml
@@ -73,6 +73,8 @@
               href: visuals/high-contrast-support.md
             - name: Habilitar a sincronização de segmentações
               href: visuals/enable-sync-slicers.md
+            - name: Depurar visuais
+              href: visuals/visuals-how-to-debug.md
             - name: Solucionar problemas de visuais do Power BI
               href: power-bi-custom-visuals-troubleshoot.md
         - name: Referência
@@ -101,6 +103,8 @@
                   href: visuals/utils-svg.md
                 - name: Utilitários de tipo
                   href: visuals/utils-type.md
+                - name: Utilitários de dica de ferramenta
+                  href: visuals/utils-tooltip.md
                 - name: Utilitários de exibição de dados
                   href: visuals/utils-dataview.md
         - name: Recursos
@@ -156,6 +160,8 @@
           items:
             - name: Inserir de um aplicativo
               href: embed-from-apps.md
+            - name: Exportar relatório para arquivo
+              href: export-to.md
             - name: Instalar aplicativos automaticamente
               href: embed-auto-install-app.md
             - name: Crie um locatário do Azure Active Directory
@@ -257,8 +263,6 @@
           items:
             - name: Configurar credenciais
               href: configure-credentials.md
-            - name: Criptografar credenciais
-              href: encrypt-credentials.md
         - name: Referência
           items:
             - name: APIs REST
