--- a/powerbi-docs/admin/index.yml
+++ b/powerbi-docs/admin/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:Landing
-title: Documentação para administradores do Power BI
-summary: A documentação para administradores do Power BI fornece informações de especialistas e respostas para atender às suas necessidades, independentemente de como você usa o Power BI.
+title: Documentação do Power BI para administradores e empresas
+summary: A documentação do Power BI para administradores e empresas fornece informações e respostas de especialistas para atender às suas necessidades, independentemente de como você usa o Power BI.
 metadata:
-  title: Documentação para administradores do Power BI
-  description: A documentação para administradores do Power BI fornece informações de especialistas e respostas para atender às suas necessidades, independentemente de como você usa o Power BI.
+  title: Documentação do Power BI para administradores e empresas
+  description: A documentação do Power BI para administradores e empresas fornece informações e respostas de especialistas para atender às suas necessidades, independentemente de como você usa o Power BI.
   services: powerbi
   ms.service: powerbi
   ms.subservice: powerbi-service
@@ -11,15 +11,15 @@ metadata:
   ms.collection: collection
   author: maggiesMSFT
   ms.author: maggies
-  ms.date: 10/25/2019
-  ms.openlocfilehash: 533b8dc4ccc800e3120f3a01c6069e224c2df27e
-  ms.sourcegitcommit: ee0ea65de52b38e5976d6eb15516b0b240fa40f9
+  ms.date: 03/03/2020
+  ms.openlocfilehash: b419ba38a28d3f4a05ea7c6db2b595af86df288d
+  ms.sourcegitcommit: ced8c9d6c365cab6f63fbe8367fb33e6d827cb97
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 10/26/2019
-  ms.locfileid: "72959520"
+  ms.lasthandoff: 03/07/2020
+  ms.locfileid: "78919442"
 landingContent:
-- title: Sobre o Power BI para administradores
+- title: Power BI para administradores e empresas
   linkLists:
   - linkListType: overview
     links:
@@ -49,11 +49,25 @@ landingContent:
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: Onde está localizado o meu locatário?
+    - text: Onde o meu locatário está localizado?
       url: ../service-admin-where-is-my-tenant-located.md
-    - text: Encontrar usuários que se conectaram
+    - text: Encontrar usuários que entraram
       url: ../service-admin-access-usage.md
-    - text: Auditando o Power BI
+    - text: Auditar o Power BI
+      url: ../service-admin-auditing.md
+    - text: Monitorar a integridade do serviço
+      url: ../service-admin-health.md
+    - text: Fechamento da sua conta do Power BI
+      url: ../service-admin-closing-your-account.md
+- title: Power BI Premium
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: Onde o meu locatário está localizado?
+      url: ../service-admin-where-is-my-tenant-located.md
+    - text: Encontrar usuários que entraram
+      url: ../service-admin-access-usage.md
+    - text: Auditar o Power BI
       url: ../service-admin-auditing.md
     - text: Monitorar a integridade do serviço
       url: ../service-admin-health.md
