--- a/powerbi-docs/developer/TOC.yml
+++ b/powerbi-docs/developer/TOC.yml
@@ -93,12 +93,18 @@
               href: visuals/localization.md
             - name: Utilitários visuais do Power BI
               items:
+                - name: Adicionar bibliotecas externas
+                  href: visuals/adding-external-libraries.md
                 - name: Utilitários de interatividade
                   href: visuals/utils-interactivity-selections.md
                 - name: Utilitários de formatação
                   href: visuals/utils-formatting.md
+                - name: Utilitários de exibição de dados
+                  href: visuals/utils-dataview.md
                 - name: Utilitários de gráfico
                   href: visuals/utils-chart.md
+                - name: Utilitários de cor
+                  href: visuals/utils-color.md
                 - name: Utilitários de SVG
                   href: visuals/utils-svg.md
                 - name: Utilitários de tipo
